--- a/Real Estate model/Estate.ipynb
+++ b/Real Estate model/Estate.ipynb
@@ -3777,9 +3777,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "21b4d44a-d5c5-4d06-96be-f44d7a9f16b5",
+   "metadata": {},
+   "source": [
+    "## Export location and column information to a file that will be useful later on in our prediction application"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "910e3888-6671-4e8c-9f33-5875aeaad9c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "columns = {\n",
+    "    'data_columns':[col.lower() for col in X.columns]\n",
+    "}\n",
+    "with open(\"columns.json\",\"w\") as f:\n",
+    "    f.write(json.dumps(columns))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9971a48-2c52-46b3-a6e2-f16afce3afa4",
+   "id": "11e4392e-f04f-444e-98e8-1530ed074002",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9df7cd7d-c291-4dd8-b93c-d23d948c81e4",
    "metadata": {},
    "outputs": [],
    "source": []
