--- a/Real Estate model/Estate.ipynb
+++ b/Real Estate model/Estate.ipynb
@@ -386,7 +386,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\shuva\\AppData\\Local\\Temp\\ipykernel_17640\\1142257054.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\shuva\\AppData\\Local\\Temp\\ipykernel_20672\\1142257054.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1130,7 +1130,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\shuva\\AppData\\Local\\Temp\\ipykernel_17640\\1125901237.py:1: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
+      "C:\\Users\\shuva\\AppData\\Local\\Temp\\ipykernel_20672\\1125901237.py:1: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
       "  df4.loaction = df4.location.apply(lambda x:x.strip())\n"
      ]
     },
@@ -2064,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "59dcce59-962b-48f1-b5f1-372d958ab36f",
    "metadata": {},
    "outputs": [
@@ -2219,7 +2219,7 @@
        "[3 rows x 242 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2231,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "34b0ed41-4a9f-4c8e-b8a7-9338aa26d7d7",
    "metadata": {},
    "outputs": [
@@ -2381,7 +2381,7 @@
        "[3 rows x 246 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2393,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "id": "f470d3ac-2a1c-4a67-a65a-4ebfa2602093",
    "metadata": {},
    "outputs": [
@@ -2599,7 +2599,7 @@
        "[5 rows x 245 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2611,7 +2611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "id": "36cadba3-e19a-4f18-9cbd-8d8403d666dc",
    "metadata": {},
    "outputs": [
@@ -2621,7 +2621,7 @@
        "(8254, 245)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2632,7 +2632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "id": "7cb4f6e1-7cfb-4027-b845-c63756450c5f",
    "metadata": {},
    "outputs": [
@@ -2845,7 +2845,7 @@
        "[5 rows x 243 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2857,7 +2857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "id": "52d54f8f-eb14-4172-a8dc-96dfa9458b15",
    "metadata": {},
    "outputs": [
@@ -2872,7 +2872,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2892,7 +2892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "id": "71230a85-d44b-4921-8ed2-02d8ea922a11",
    "metadata": {},
    "outputs": [],
@@ -2902,7 +2902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "id": "b9f85261-5d7d-48b2-8eb9-ea074ddc2359",
    "metadata": {},
    "outputs": [
@@ -2926,7 +2926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "id": "908f9833-2b09-4555-86b1-3adb6b3640c6",
    "metadata": {},
    "outputs": [],
@@ -2943,7 +2943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 53,
    "id": "a92cfb20-ff6b-4418-afbe-d7f7d72cb163",
    "metadata": {},
    "outputs": [],
@@ -2953,7 +2953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 54,
    "id": "9992809e-86cc-4150-870f-d700ddbeca11",
    "metadata": {},
    "outputs": [
@@ -3370,7 +3370,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3384,7 +3384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 55,
    "id": "a7fe295e-9b94-4f65-bc29-54b01cfe86bb",
    "metadata": {},
    "outputs": [
@@ -3394,7 +3394,7 @@
        "-0.02739142360652491"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3413,7 +3413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 56,
    "id": "b1109e81-5b5e-4fab-8170-8a00a39f5da7",
    "metadata": {},
    "outputs": [],
@@ -3424,7 +3424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 57,
    "id": "95eec07f-9307-4dd4-8265-d55601a88be2",
    "metadata": {},
    "outputs": [
@@ -3434,7 +3434,7 @@
        "array([-0.04197132, -0.02395077, -0.03715714, -0.0411857 , -0.04219102])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3454,7 +3454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 58,
    "id": "4415fb05-a116-43e1-a95c-516264bfd179",
    "metadata": {},
    "outputs": [],
@@ -3464,7 +3464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 59,
    "id": "78164317-1411-423a-9b23-7e4da29c4843",
    "metadata": {},
    "outputs": [],
@@ -3475,7 +3475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 60,
    "id": "e4e3dd7a-9e9a-4923-bf04-c1cedc1a6c0d",
    "metadata": {},
    "outputs": [
@@ -3500,10 +3500,10 @@
       "    validate_parameter_constraints(\n",
       "  File \"C:\\ProgramData\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\_param_validation.py\", line 95, in validate_parameter_constraints\n",
       "    raise InvalidParameterError(\n",
-      "sklearn.utils._param_validation.InvalidParameterError: The 'criterion' parameter of DecisionTreeRegressor must be a str among {'absolute_error', 'squared_error', 'friedman_mse', 'poisson'}. Got 'mse' instead.\n",
+      "sklearn.utils._param_validation.InvalidParameterError: The 'criterion' parameter of DecisionTreeRegressor must be a str among {'poisson', 'squared_error', 'friedman_mse', 'absolute_error'}. Got 'mse' instead.\n",
       "\n",
       "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "C:\\ProgramData\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1051: UserWarning: One or more of the test scores are non-finite: [        nan         nan -0.85983068 -0.86479958]\n",
+      "C:\\ProgramData\\anaconda3\\Lib\\site-packages\\sklearn\\model_selection\\_search.py:1051: UserWarning: One or more of the test scores are non-finite: [        nan         nan -0.86535792 -0.89600124]\n",
       "  warnings.warn(\n"
      ]
     },
@@ -3544,12 +3544,12 @@
        "      <th>1</th>\n",
        "      <td>lasso</td>\n",
        "      <td>-0.000725</td>\n",
-       "      <td>{'alpha': 1, 'selection': 'cyclic'}</td>\n",
+       "      <td>{'alpha': 1, 'selection': 'random'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>decision_tree</td>\n",
-       "      <td>-0.859831</td>\n",
+       "      <td>-0.865358</td>\n",
        "      <td>{'criterion': 'friedman_mse', 'splitter': 'best'}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3560,15 +3560,15 @@
        "               model  best_score  \\\n",
        "0  linear_regression   -0.037291   \n",
        "1              lasso   -0.000725   \n",
-       "2      decision_tree   -0.859831   \n",
+       "2      decision_tree   -0.865358   \n",
        "\n",
        "                                         best_params  \n",
        "0                            {'fit_intercept': True}  \n",
-       "1                {'alpha': 1, 'selection': 'cyclic'}  \n",
+       "1                {'alpha': 1, 'selection': 'random'}  \n",
        "2  {'criterion': 'friedman_mse', 'splitter': 'best'}  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3622,7 +3622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 61,
    "id": "7a59b809-b30f-4ef8-98f0-ab6219ab4dff",
    "metadata": {},
    "outputs": [],
@@ -3642,7 +3642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 62,
    "id": "f879ae29-ef89-447a-b10d-8bb06a928e73",
    "metadata": {},
    "outputs": [
@@ -3660,7 +3660,7 @@
        "88.87827103302698"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3671,7 +3671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 63,
    "id": "91ed692d-c86d-4f0e-acdd-a8a399be3506",
    "metadata": {},
    "outputs": [
@@ -3689,7 +3689,7 @@
        "88.6459086526356"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3700,7 +3700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 64,
    "id": "30ee5994-97f7-4fde-8a9e-21586f8e45fd",
    "metadata": {},
    "outputs": [
@@ -3718,7 +3718,7 @@
        "83.90503938315163"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3729,7 +3729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 65,
    "id": "100ea1f4-db46-426c-9f6c-27b2e1fe0e41",
    "metadata": {},
    "outputs": [
@@ -3747,7 +3747,7 @@
        "83.67267700276027"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3766,13 +3766,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 66,
    "id": "556f49ed-cb32-4ff0-8682-710fa8a3822c",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-03T15:23:25.073418Z",
+     "start_time": "2025-05-03T15:23:23.884681Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
-    "with open('banglore_home_price_model.pickel','wb') as f:\n",
+    "with open('bangalore_home_price_model.pickle','wb') as f:\n",
     "    pickle.dump(lr_clf,f)"
    ]
   },
@@ -3786,7 +3791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 67,
    "id": "910e3888-6671-4e8c-9f33-5875aeaad9c4",
    "metadata": {},
    "outputs": [],
@@ -3811,6 +3816,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9df7cd7d-c291-4dd8-b93c-d23d948c81e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72b7ec4f-48f0-4cfb-872e-343ddfcf26ab",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20193e93-5047-43db-b5fc-75a64ae08946",
    "metadata": {},
    "outputs": [],
    "source": []
